--- a/album.html
+++ b/album.html
@@ -44,6 +44,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="assets/js/rick.js"></script>
+    <script src="assets/js/pokemon.js"></script>
   </body>
 </html>
